# trajectory_behaviours

./: .gitignore
activity_exploration/: CMakeLists.txt  package.xml
activity_exploration/launch/: activity_exploration.launch
activity_exploration/scripts/: counting_manager.py
activity_exploration/src/periodic_poisson_processes/: people_poisson.py  poisson_processes.py
activity_exploration/src/region_observation/: observe.py  util.py
human_trajectory_classifier/: CMakeLists.txt
human_trajectory_classifier/action/: TrajectoryClassification.action
human_trajectory_classifier/data/: train.data
human_trajectory_classifier/launch/: trajectory_classifier.launch
human_trajectory_classifier/msg/: HumanTrajectoryClassification.msg  TrajectoryType.msg
human_trajectory_classifier/scripts/: client_test.py  trajectory_classifier.py
human_trajectory_classifier/src/human_trajectory_classifier/: classifier.py  sssvm.py  svm_classifier.py  svmc.py  trajectory_data.py
occurrence_learning/: CMakeLists.txt  package.xml  setup.py
occurrence_learning/launch/: occurrence_learning.launch
occurrence_learning/msg/: OccurrenceRate.msg
occurrence_learning/scripts/: client_service_example.py  tof_manager.py  tof_plot.py
occurrence_learning/src/occurrence_learning/: occurrence_learning_util.py  occurrence_rate.py  region_observation_time.py  synthetic_tof.py  trajectory_occurrence_freq.py  trajectory_periodicity.py  trajectory_region_est.py
occurrence_learning/srv/: TrajectoryOccurrenceRate.srv
