<?xml version="1.0"?>
<package>
  <name>occurrence_learning</name>
  <version>0.0.1</version>
  <description>Learning and updating the occurence rate of poisson distribution based on trajectories within areas</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>
  <author email="fxj345@cs.bham.ac.uk">Ferdian Jovan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>soma_geospatial_store</build_depend>
  <build_depend>strands_navigation_msgs</build_depend>
  <build_depend>soma_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>python-pymongo</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>soma_geospatial_store</run_depend>
  <run_depend>strands_navigation_msgs</run_depend>
  <run_depend>soma_msgs</run_depend>
</package>
